# tui-stuff

./: README.md
dndtui/: .gitignore  Cargo.toml  README.md
dndtui/assets/icons/: ATTRIBUTION.md
dndtui/assets/scenarios/starter/: manifest.yaml  map.txt
dndtui/src/: action.rs  effect.rs  icons.rs  main.rs  persist.rs  reducer.rs  rules.rs  scenario.rs  sprite.rs  sprite_backend.rs  state.rs  ui.rs
dndtui/src/llm/: mod.rs  ollama.rs  openai.rs  prompt.rs  schema.rs
lightline/: Cargo.toml  PLAN.md  README.md
lightline/src/: action.rs  effect.rs  lighting.rs  main.rs  procgen.rs  reducer.rs  state.rs  ui.rs
lightline/src/danger/: collapse.rs  hunter.rs  mod.rs
pokeapi/: .gitignore  Cargo.toml  README.md
pokeapi/src/: action.rs  api.rs  audio.rs  effect.rs  main.rs  reducer.rs  sprite.rs  sprite_backend.rs  state.rs  ui.rs
poketui/: Cargo.toml  README.md
poketui/assets/scenarios/lakeside/: manifest.ron  map.txt
poketui/src/: action.rs  api.rs  effect.rs  main.rs  reducer.rs  scenario.rs  sprite.rs  sprite_backend.rs  state.rs  ui.rs
tui-map/: Cargo.toml
tui-map/src/: core.rs  lib.rs  parse.rs  prelude.rs  procgen.rs  render.rs
weather/: Cargo.toml  README.md
weather/sprites/cloudy/: large_darkgray.txt  large_lightgray.txt  medium_darkgray.txt  medium_lightgray.txt  small_darkgray.txt  small_lightgray.txt
weather/sprites/drizzle/: large_blue.txt  medium_blue.txt  medium_gray.txt  small_blue.txt
weather/sprites/fog/: large_darkgray.txt  large_lightgray.txt  medium_lightgray.txt  small_darkgray.txt  small_lightgray.txt
weather/sprites/partly_cloudy/: large_gray.txt  large_yellow.txt  medium_gray.txt  medium_yellow.txt  small_gray.txt  small_yellow.txt
weather/sprites/rain/: large_blue.txt  medium_blue.txt  small_blue.txt
weather/sprites/snow/: large_white.txt  medium_white.txt  small_white.txt
weather/sprites/sun/: large_yellow.txt  medium_yellow.txt  small_yellow.txt
weather/sprites/thunderstorm/: large_gray.txt  large_yellow.txt  medium_gray.txt  medium_yellow.txt  small_gray.txt  small_yellow.txt
weather/src/: action.rs  api.rs  effect.rs  lib.rs  main.rs  reducer.rs  sprites.rs  state.rs
weather/src/components/: location_header.rs  mod.rs  search_overlay.rs  weather_body.rs  weather_display.rs
weather/tests/: action_tests.rs  harness_tests.rs  render_tests.rs
