[package]
name = "dndtui"
version = "0.1.0"
edition = "2021"

[dependencies]
tui-dispatch = { version = "0.5.4", features = ["tasks", "subscriptions"] }
tui-dispatch-debug = { version = "0.5.4", features = ["json-schema"] }
tui-dispatch-components = "0.5.4"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
async-trait = "0.1"
futures-util = "0.3"
dirs-next = "2.0"
base64 = "0.22"
image = { version = "0.25", default-features = true }

[dev-dependencies]
pretty_assertions = "1"
