[package]
name = "poketui"
version = "0.1.0"
edition = "2021"

[dependencies]
tui-dispatch = { version = "0.5.4", features = ["tasks", "subscriptions"] }
tui-dispatch-debug = { version = "0.5.4", features = ["json-schema"] }
tui-dispatch-components = "0.5.4"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
schemars = { version = "0.8", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
image = "0.25"
sha2 = "0.10"
hex = "0.4"
rodio = { version = "0.19", features = ["symphonia"] }
dirs-next = "2.0"
